--- a/index.html
+++ b/index.html
@@ -20,25 +20,26 @@
             <div class="profile-content">
                 <div class="profile-text">
                     </br>
-                    </br>
-                    <p>Hi, I'm Carol Zhang. I'm a CS master student at UCSD.</p>
-                    </br>
-                    <p>
-                        My research interests focus on <strong>Human-AI Interaction for Social Impact</strong> and
-                        <strong>AI for Social Good</strong>, particularly the societal implications of technology. This
-                        includes designing chatbots and integrating <strong>multimodal agents</strong> in games to
-                        promote sustainability awareness among players.
 
-                        Recently, I have also explored <strong>Al for productivity tools.</strong>
+                    <p>Hi, I'm Carol Zhang. I'm currently a first-year Computer Science Master student at the University
+                        of California, San Diego (UCSD).
                     </p>
-
                     </br>
-                    <p>I'm working with <a href="https://spdow.ucsd.edu/">Prof. Steven Dow</a> at <a
+                    <p>My main research interests focus on <strong>AI for Social Good</strong> and <strong>Human-AI
+                            Interaction</strong>. I have developed <strong> conversational agents </strong> that engage
+                        users about environmental challenges. Recently, I have also focused on enhancing the
+                        accessibility of AI in productivity tools that allow users to interact
+                        with these systems in a more enjoyable and effortless manner.
+                        </br>
+                        </br>
+                        Currently, I'm working with <a href="https://spdow.ucsd.edu/">Prof. Steven Dow</a> at <a
                             href="https://designlab.ucsd.edu/">UCSD Design Lab</a>. I also have worked with <a
-                            href="https://www.scm.cityu.edu.hk/people/ray-lc">Dr.Ray LC</a> at HK CityU on AI for Social
-                        Good, resulting in a <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">co-first
-                            authored paper</a> published at CHI 2024.</p>
-                    </br>
+                            href="https://www.scm.cityu.edu.hk/people/ray-lc">Dr.Ray LC</a> at HK CityU, resulting in a
+                        <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">co-first
+                            authored paper</a> published at CHI 2024.
+                    <p>
+                        </br>
+
                     <!-- <p>I obtained my Bachelor's degree in Computer Science and Technology from the School of Information
                         Engineering at <a href="https://english.cjlu.edu.cn/">China Jiliang University (CJLU)</a> and
                         another degree in Computer and Information Science at <a href="https://www.aut.ac.nz/">Auckland
