--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </br>
                     <p>My main research interests focus on <strong>AI for Social Good</strong> and <strong>Human-AI
                             Interaction</strong>. I have developed <strong> conversational agents </strong> that engage
-                        users about environmental challenges. Recently, I have also focused on enhancing the
+                        users about environmental challenges. Recently, I have also exploared enhancing the
                         accessibility of AI in productivity tools that allow users to interact
                         with these systems in a more enjoyable and effortless manner.
                         </br>
