--- a/cv.html
+++ b/cv.html
@@ -19,6 +19,10 @@
     </header>
 
     <main>
+        <section id="publications">
+            <h2>Research Interests</h2>
+            AI for Social Good, Human-AI Interaction, Human-Centered NLP, Game Design and Development
+        </section>  
         <section id="education">
             <h2>Education</h2>
             <div class="education-item">
