--- a/cv.html
+++ b/cv.html
@@ -253,9 +253,11 @@
         <section id="service">
             <h2>Service</h2>
 
-            <h3>Volunteer</h3>
+            <h3>Volunteer </h3>
             <p>Volunteer, CHI, 2024 </p>
             <p>Volunteer, Chinese CHI, 2023 </p>
+            <h3>Conference Reviewer</h3>
+            <p>ACM Conference on Human Factors in Computing Systems (CHI)  2024</p>
             <!-- 
             <h3>Organizer</h3>
             <p>Workshop on Visualization for AI Explainability at VIS (<strong>VISxAI</strong>) 2022, 2023</p>
