--- a/cv.html
+++ b/cv.html
@@ -28,7 +28,9 @@
             <div class="education-item">
                 <h3>University of California, San Diego (UCSD)</h3>
                 <p>Master of Science in Computer Science and Engineering</p>
-                <p>Sept. 2024 — June. 2026(Expected)</p>
+                <p>Sept. 2024 — June. 2026 (Expected)</p>
+                <p><strong>Current Curriculum: </strong>Programmers are humans too, Statistical Natural Language Processing</p>
+        
                 <!-- <p>Advisor: Duen Horng (Polo) Chau</p>
                 <p>Thesis: Democratizing Human-Centered AI with Visual Explanation and Interactive Guidance</p>
                 <p>Thesis Committee: Duen Horng (Polo) Chau, Judy Hoffman, Munmun De Choudhury, Lauren Wilcox, Jenn Wortman Vaughan, Rich Caruana</p> -->
@@ -183,8 +185,7 @@
                 <a href="https://www.scm.cityu.edu.hk/people/ray-lc">Mentor: Dr. Ray LC</a>
                 <p class="description">Proposed the idea of a ChatGPT-based interactive game to promote climate change
                     actions.</p>
-                <p class="description">Developed a world-building game utilizing GPT-4 and other NLP techniques(as web
-                    developer.</p>
+                <p class="description">Developed a world-building game utilizing GPT-4 and other NLP techniques</p>
                 <p class="description">Responsible for user studies, including recruiting, interviewing, data analysis,
                     and writing, resulting a full paper to CHI’24.</p>
             </div>
