--- a/cv.html
+++ b/cv.html
@@ -161,8 +161,7 @@
                     Collaborated with the visual design, research, content teams, and other teams to address
                     housing issues in San Diego. </p>
                 <p class="description">
-                    Served as the lead developer for the D4SD website, utilizing WordPress for design and func-
-                    tionality.</p>
+                    Served as the lead developer for the D4SD website, utilizing WordPress for design and functionality.</p>
             </div>
 
             <div class="research-item">
@@ -174,7 +173,7 @@
                     Led team meeting coordination and slide presentation preparations and engaged in deep analysis and
                     presentation of ADA Title II.</p>
                 <p class="description">
-                    EExplored and researched accessibility resources on the UCI ICS website, preparing detailed
+                    Explored and researched accessibility resources on the UCI ICS website, preparing detailed
                     presentations on findings.</p>
             </div>
 
