--- a/cv.html
+++ b/cv.html
@@ -285,7 +285,7 @@
             
             <h3>Technical Skills</h3>
             <p><strong>Programming Languages:</strong> Python, Java, JavaScript, TypeScript, R, SQL, LaTeX, MATLAB, HTML/CSS</p>
-            <p><strong>Machine Learning & Natural Language Processing:</strong> PyTorch, TensorFlow, Scikit-learn, Pandas, Language Model Fine-tuning (e.g., BERT, GPT)</p>
+            <p><strong>Machine Learning & Natural Language Processing:</strong> PyTorch, TensorFlow, Hugging Face Transformers, Scikit-learn, Pandas, NLTK, Language Model Fine-tuning (e.g., BERT, GPT)</p>
             <p><strong>Web & Mobile Development:</strong> Node.js, React.js, Flask, FastAPI, Django</p>
             <p><strong>Data Analysis & Visualization:</strong> Kafka, Spark, Redis, Matplotlib, Seaborn, Tableau</p>
         
