--- a/index.html
+++ b/index.html
@@ -26,10 +26,9 @@
                     </p>
                     </br>
                     <p>My main research interests focus on <strong>AI for Social Good</strong> and <strong>Human-AI
-                            Interaction</strong>. I have developed <strong> conversational agents </strong> that engage
-                        users about environmental challenges. Recently, I have also exploared enhancing the
-                        accessibility of AI in productivity tools that allow users to interact
-                        with these systems in a more enjoyable and effortless manner.
+                            Interaction</strong>. I have developed <strong> conversational agents </strong> leveraging NLP techniques to engage
+                        users about environmental challenges.  </br>
+                        Recently, I have also exploared integrating multi-agent systems into productivity tools.
                         </br>
                         </br>
                         Currently, I'm working with <a href="https://spdow.ucsd.edu/">Prof. Steven Dow</a> at <a
@@ -40,7 +39,7 @@
                     <p>
                         </br>
 
-                    <!-- <p>I obtained my Bachelor's degree in Computer Science and Technology from the School of Information
+                        <!-- <p>I obtained my Bachelor's degree in Computer Science and Technology from the School of Information
                         Engineering at <a href="https://english.cjlu.edu.cn/">China Jiliang University (CJLU)</a> and
                         another degree in Computer and Information Science at <a href="https://www.aut.ac.nz/">Auckland
                             University of Technology (AUT)</a>, advised by Dr. Lin Xiang and Dr. Haijun Tao.</p> -->
