--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <p>My main research interests focus on <strong>AI for Social Good</strong> and <strong>Human-AI
                             Interaction</strong>. I have developed <strong> conversational agents </strong> leveraging NLP techniques to engage
                         users about environmental challenges.  </br>
-                        Recently, I have also exploared integrating multi-agent systems into productivity tools.
+                        Recently, I have also explored integrating multi-agent systems into productivity tools, focusing on enhancing the accessibility of machine learning systems.
                         </br>
                         </br>
                         Currently, I'm working with <a href="https://spdow.ucsd.edu/">Prof. Steven Dow</a> at <a
