--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <p>My main research interests focus on <strong>AI for Social Good</strong> and <strong>Human-AI
                             Interaction</strong>. I have developed <strong> conversational agents </strong> leveraging NLP techniques to engage
                         users about environmental challenges.  </br>
-                        Recently, I have also explored automated AI productivity tool through a multi-stage pipeline. 
+                        Recently, I have also explored improving the accessibility of AI productivity tool. 
                         </br>
                         </br>
                         Currently, I'm working with <a href="https://spdow.ucsd.edu/">Prof. Steven Dow</a> at <a
@@ -286,6 +286,30 @@
             </div>
             <button id="show-more-btn" class="show-more">+ show more</button>
         </section>
+        <section id="miscellaneous">
+            <h2>Miscellaneous</h2>
+            <div class="misc-container">
+                <p class="gaming-intro">I enjoy playing video games in my free time! Here are some of my favorites:</p>
+                <div class="game-grid">
+                    <a href="https://www.playstation.com/en-us/games/detroit-become-human/" class="game-card">
+                        <div class="game-icon">🤖</div>
+                        <h3>Detroit: Become Human</h3>
+                        <p>A story about humanity, consciousness, and freedom</p>
+                    </a>
+                    <a href="https://www.playstation.com/en-us/games/uncharted-4-a-thiefs-end/" class="game-card">
+                        <div class="game-icon">🗺️</div>
+                        <h3>Uncharted</h3>
+                        <p>Adventure awaits in this thrilling treasure hunt</p>
+                    </a>
+                    <a href="https://www.rockstargames.com/gta-v" class="game-card">
+                        <div class="game-icon">🚗</div>
+                        <h3>Grand Theft Auto V</h3>
+                        <p>An epic tale of crime and ambition in Los Santos</p>
+                    </a>
+                </div>
+            </div>
+        </section>
+        
     </main>
 
     <footer>
