--- a/cv.html
+++ b/cv.html
@@ -21,7 +21,7 @@
     <main>
         <section id="publications">
         <h2>Research Interests</h2>
-         AI for Social Good, Human-AI Interaction, Conversational Agent, Human-Centered NLP, Game Design and Development,
+         AI for Social Good, Human-AI Interaction, Conversational Agent, Human-Centered NLP
         </section>  
         <section id="education">
             <h2>Education</h2>
