--- a/cv.html
+++ b/cv.html
@@ -76,7 +76,7 @@
                             <a href="https://your-video-link-here.com" class="btn btn-sm">
                                 <i class="fas fa-video"></i> Video
                             </a>
-                            <a href="https://your-project-link-here.com" class="btn btn-sm">
+                            <a href="https://recfro.github.io/eternagram/" class="btn btn-sm">
                                 <i class="fas fa-project-diagram"></i> Project
                             </a>
                     <!-- <a href="#" class="poster"><i class="fas fa-image"></i> Poster</a> -->
