--- a/cv.html
+++ b/cv.html
@@ -166,7 +166,7 @@
 
             <div class="research-item">
                 <h3>University of California, Irvine <span class="location">Irvine, CA</span></h3>
-                <p class="position">Summer Research Intern, School of Information & Computer Science </p>
+                <p class="position"><a href="https://docs.google.com/presentation/d/1FwsP9Hcv3w_6Mi_2hffRKxGUDm9jCf6epaAJN-iBas4/edit?usp=sharing">Summer Research Intern,</a> School of Information & Computer Science </p>
                 <p class="date">June. 2024 — Sept. 2024</p>
                 <a href="https://www.stacybranham.com/">Mentor: Prof. Stacy Branham</a>
                 <p class="description">
@@ -179,7 +179,7 @@
 
             <div class="research-item">
                 <h3>City University of Hongkong <span class="location">Hongkong, CN</span></h3>
-                <p class="position">HCIX Summer Research Program, School of Creative Media</p>
+                <p class="position"><a href="https://recfro.github.io/eternagram/">HCIX Summer Research Program,</a> School of Creative Media</p>
                 <p class="date">June. 2023 — Sept.2023</p>
                 <a href="https://www.scm.cityu.edu.hk/people/ray-lc">Mentor: Dr. Ray LC</a>
                 <p class="description">Proposed the idea of a ChatGPT-based interactive game to promote climate change
