--- a/cv.html
+++ b/cv.html
@@ -166,7 +166,7 @@
 
             <div class="research-item">
                 <h3>University of California, Irvine <span class="location">Irvine, CA</span></h3>
-                <p class="position"><a href="https://docs.google.com/presentation/d/1FwsP9Hcv3w_6Mi_2hffRKxGUDm9jCf6epaAJN-iBas4/edit?usp=sharing">Summer Research Intern,</a> School of Information & Computer Science </p>
+                <p class="position"><a href="https://docs.google.com/presentation/d/1FwsP9Hcv3w_6Mi_2hffRKxGUDm9jCf6epaAJN-iBas4/edit?usp=sharing">Summer Research Intern,</a> UCI INsite Lab</p>
                 <p class="date">June. 2024 — Sept. 2024</p>
                 <a href="https://www.stacybranham.com/">Mentor: Prof. Stacy Branham</a>
                 <p class="description">
@@ -179,7 +179,7 @@
 
             <div class="research-item">
                 <h3>City University of Hongkong <span class="location">Hongkong, CN</span></h3>
-                <p class="position"><a href="https://recfro.github.io/eternagram/">HCIX Summer Research Program,</a> School of Creative Media</p>
+                <p class="position"><a href="https://recfro.github.io/eternagram/">HCIX Summer Research Program,</a> Studio For Narrative Space</p>
                 <p class="date">June. 2023 — Sept.2023</p>
                 <a href="https://www.scm.cityu.edu.hk/people/ray-lc">Mentor: Dr. Ray LC</a>
                 <p class="description">Proposed the idea of a ChatGPT-based interactive game to promote climate change
@@ -190,7 +190,7 @@
             </div>
             <div class="research-item">
                 <h3>China Jiliang University<span class="location">Hangzhou, CN</span></h3>
-                <p class="position"><a href="./PDF/poster.pdf#page=6.76">Undergraduate Research, </a>Department of Information Technology</p>
+                <p class="position"><a href="./PDF/poster.pdf#page=6.76">Undergraduate Research, </a>Institute of Computer Technology and Applications </p>
                 <p class="date">Sept. 2022 — May. 2023</p>
                 <p class="mentor">Mentor: Dr. Haijun Tao & Dr.Lin Xiang</p>
                 <p class="description">Developed a real-time video analysis framework using Gstreamer and YOLOv5 for
@@ -201,7 +201,7 @@
             </div>
             <div class="research-item">
                 <h3>Auckland University of Technology<span class="location">Auckland, NZ</span></h3>
-                <p class="position"><a href="./PDF/Final_Brief.pdf">Undergraduate Research, </a>School of Engineering, Computer and Mathematical Sciences
+                <p class="position"><a href="./PDF/Final_Brief.pdf">Undergraduate Research, </a>Data Science Research Centre
                 </p>
                 <p class="date">Sept. 2022 — Dec. 2022</p>
                 <a
