--- a/cv.html
+++ b/cv.html
@@ -73,7 +73,7 @@
                             class="fas fa-file-pdf"></i> PDF</a>
                     <a href="https://github.com/Carolzhangzz/Eternagram_" class="btn btn-sm"> <i
                             class="fas fa-code"></i> Code <span class="star-count">★</span></a>
-                            <a href="https://your-video-link-here.com" class="btn btn-sm">
+                            <a href="https://www.youtube.com/watch?v=lvC-KcD2qRE&t=6s" class="btn btn-sm">
                                 <i class="fas fa-video"></i> Video
                             </a>
                             <a href="https://recfro.github.io/eternagram/" class="btn btn-sm">
