--- a/cv.html
+++ b/cv.html
@@ -185,7 +185,7 @@
                 <p class="description">Proposed the idea of a ChatGPT-based interactive game to promote climate change
                     actions.</p>
                 <p class="description">Developed a world-building game utilizing GPT-4 and other NLP techniques</p>
-                <p class="description">Responsible for user studies, including recruiting, interviewing, data analysis,
+                <p class="description">Responsible for user studies of 33 participants, including recruiting, interviewing, data analysis,
                     and writing, resulting a full paper to CHI’24.</p>
             </div>
             <div class="research-item">
