--- a/cv.html
+++ b/cv.html
@@ -166,7 +166,7 @@
 
             <div class="research-item">
                 <h3>University of California, Irvine <span class="location">Irvine, CA</span></h3>
-                <p class="position"><a href="https://docs.google.com/presentation/d/1FwsP9Hcv3w_6Mi_2hffRKxGUDm9jCf6epaAJN-iBas4/edit?usp=sharing">Summer Research Intern,</a> UCI INsite Lab</p>
+                <p class="position"><a href="https://docs.google.com/presentation/d/1FwsP9Hcv3w_6Mi_2hffRKxGUDm9jCf6epaAJN-iBas4/edit?usp=sharing">Summer Research Intern,</a> UCI INsite</p>
                 <p class="date">June. 2024 — Sept. 2024</p>
                 <a href="https://www.stacybranham.com/">Mentor: Prof. Stacy Branham</a>
                 <p class="description">
