--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
                     </p>
                     </br>
                     <p>My main research interests focus on <strong>AI for Social Good</strong> and <strong>Human-AI
-                            Interaction</strong>. I have developed <strong> conversational agents </strong> leveraging NLP techniques to engage
-                        users about environmental challenges.  </br>
-                        Recently, I have also explored improving the accessibility of AI productivity tool. 
+                            Interaction</strong>. </br>
+                        I have developed <strong> conversational agents </strong> leveraging
+                        NLP techniques to evaluate and intervenue user's mental models by engaging
+                        users about environmental challenges. </br>
+                        Recently, I have also explored improving the accessibility of AI productivity tool.
                         </br>
                         </br>
                         Currently, I'm working with <a href="https://spdow.ucsd.edu/">Prof. Steven Dow</a> at <a
