--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                     </p>
                     </br>
                     <p>My main research interests focus on <strong>AI for Social Good</strong> and <strong>Human-AI
-                            Interaction</strong>. </br>
-                        I have developed <strong> conversational agents </strong> leveraging
+                            Interaction</strong>. </br> </br>
+                        I have designed and developed <strong> conversational agents </strong> leveraging
                         NLP techniques to evaluate and intervenue user's mental models by engaging
-                        users about environmental challenges. </br>
+                        users about environmental challenges. </br> </br>
                         Recently, I have also explored improving the accessibility of AI productivity tool.
                         </br>
                         </br>
