--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
                     <p>My main research interests focus on <strong>AI for Social Good</strong> and <strong>Human-AI
                             Interaction</strong>. </br> </br>
                         I have designed and developed <strong> conversational agents </strong> leveraging
-                        NLP techniques to evaluate and intervenue user's mental models by engaging
-                        users about environmental challenges. </br> </br>
+                        NLP techniques to evaluate and intervenue user's environmental attitudes and behaviors through in-game decisions. </br> </br>
                         Recently, I have also explored improving the accessibility of AI productivity tool.
                         </br>
                         </br>
