--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <p>My main research interests focus on <strong>AI for Social Good</strong> and <strong>Human-AI
                             Interaction</strong>. </br> </br>
                         I have designed and developed <strong> conversational agents </strong> leveraging
-                        NLP techniques to evaluate and intervene user's environmental attitudes and behaviors through in-game decisions. </br> </br>
+                        NLP techniques to evaluate and intervene user's environmental attitudes and behaviors. </br> </br>
                         </br>
                         Currently, I'm working with <a href="https://spdow.ucsd.edu/">Prof. Steven Dow</a> at <a
                             href="https://designlab.ucsd.edu/">UCSD Design Lab</a>. I also have worked with <a
