--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
                     <p>My main research interests focus on <strong>AI for Social Good</strong> and <strong>Human-AI
                             Interaction</strong>. </br> </br>
                         I have designed and developed <strong> conversational agents </strong> leveraging
-                        NLP techniques to evaluate and intervene user's environmental attitudes and behaviors. </br> </br>
-                
+                        NLP techniques to evaluate and intervene user's environmental attitudes and behaviors. </br>
+                        </br>
+
                         Currently, I'm working with <a href="https://spdow.ucsd.edu/">Prof. Steven Dow</a> at <a
                             href="https://designlab.ucsd.edu/">UCSD Design Lab</a>. I also have worked with <a
                             href="https://www.scm.cityu.edu.hk/people/ray-lc">Dr.Ray LC</a> at HK CityU, resulting in a
@@ -178,7 +179,7 @@
                                 Consequences to Raise Sustainability Awareness</h3>
                             <p class="authors"><strong>Qinshi Zhang</strong>, Ruoyu Wen, Zijian Ding, Latisha Besariani
                                 Hendra, Ray LC†</p>
-                            <p class="venue">Preprint</p>
+                            <p class="venue">CHI 2025</p>
                             <div class="publication-links">
                                 <a href="https://ecoecho.duckdns.org/" class="btn btn-sm"><i class="fas fa-play"></i>
                                     Demo</a>
@@ -234,6 +235,14 @@
         <section id="news">
             <h2>News</h2>
             <div class="news-container">
+                <div class="news-item">
+                    <span class="date">2024.10</span>
+                    <div class="news-content">
+                        Our paper,
+                        <a href="./PDF/GameSustainability_CHI_25__Clean_Version_.pdf">Can AI Prompt Humans</a>,
+                        has been fully accepted at CHI 2025!
+                    </div>
+                </div>
                 <div class="news-item">
                     <span class="date">2024.10</span>
                     <div class="news-content">
