--- a/cv.html
+++ b/cv.html
@@ -101,10 +101,10 @@
                     Sustainability Awareness</h4>
                 <p class="authors"><strong>Qinshi Zhang</strong>, Ruoyu Wen, Zijian Ding, Latisha Besariani Hendra, Ray
                     LC†</p>
-                <p class="venue">Preprint</p>
+                <p class="venue">CHI 2025</p>
                 <div class="links">
                     <a href="https://ecoecho.duckdns.org/" class="btn btn-sm"><i class="fas fa-play"></i> Demo</a>
-                    <a href="https://arxiv.org/abs/2409.08486" class="btn btn-sm"><i class="fas fa-file-pdf"></i>
+                    <a href="./PDF/GameSustainability_CHI_25__Clean_Version_.pdf" class="btn btn-sm"><i class="fas fa-file-pdf"></i>
                         PDF</a>
                     <a href="https://github.com/Carolzhangzz/Eco_Echo" class="btn btn-sm"><i class="fas fa-code"></i>
                         Code <span class="star-count">★</span></a>
@@ -115,7 +115,7 @@
                 title={Can AI Prompt Humans? Multimodal Agents Prompt Players' Game Actions and Show Consequences to Raise Sustainability Awareness},
                 author={Zhang, Qinshi and Wen, Ruoyu and Ding, Zijian and Hendra, Latisha Besariani and LC, Ray},
                 journal={arXiv preprint arXiv:2409.08486},
-                year={2024}
+                year={2024}/Users/carol/Desktop/CHI25/GameSustainability_CHI_25__Clean_Version_.pdf
             }</code></pre>
                 </div>
             </div>
