--- a/cv.html
+++ b/cv.html
@@ -101,7 +101,7 @@
                     Sustainability Awareness</h4>
                 <p class="authors"><strong>Qinshi Zhang</strong>, Ruoyu Wen, Zijian Ding, Latisha Besariani Hendra, Ray
                     LC†</p>
-                <p class="venue">CHI 2025</p>
+                <p class="venue">CHI Conference on Human Factors in Computing Systems 2025</p>
                 <div class="links">
                     <a href="https://ecoecho.duckdns.org/" class="btn btn-sm"><i class="fas fa-play"></i> Demo</a>
                     <a href="./PDF/GameSustainability_CHI_25__Clean_Version_.pdf" class="btn btn-sm"><i class="fas fa-file-pdf"></i>
