--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                     <div class="news-content">
                         Our paper,
                         <a href="./PDF/GameSustainability_CHI_25__Clean_Version_.pdf">Can AI Prompt Humans</a>,
-                        has been fully accepted at CHI 2025!
+                        has been conditionally accepted at CHI 2025!
                     </div>
                 </div>
                 <div class="news-item">
