--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             href="https://designlab.ucsd.edu/">UCSD Design Lab</a>. I also have worked with <a
                             href="https://www.scm.cityu.edu.hk/people/ray-lc">Dr.Ray LC</a> at HK CityU, resulting in a
                         <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">co-first
-                            authored paper</a> published at CHI 2024.
+                            authored paper</a> published at CHI 2024 and a first author paper at CHI2025.
                     <p>
                         </br>
 
@@ -83,6 +83,44 @@
 
             <p>Note: * indicates equal contribution; † indicates the corresponding author.</p>
             <br>
+
+            <div class="publication-container">
+                <div class="publication-item">
+                    <div class="publication-content">
+                        <div class="publication-image">
+                            <img src="./images/Ecoecho.png" alt="EcoEcho Publication">
+                        </div>
+                        <div class="publication-info">
+                            <h3>Can AI Prompt Humans? Multimodal Agents Prompt Players' Game Actions and Show
+                                Consequences to Raise Sustainability Awareness</h3>
+                            <p class="authors"><strong>Qinshi Zhang</strong>, Ruoyu Wen, Zijian Ding, Latisha Besariani
+                                Hendra, Ray LC†</p>
+                            <p class="venue">CHI 2025</p>
+                            <div class="publication-links">
+                                <a href="https://ecoecho.duckdns.org/" class="btn btn-sm"><i class="fas fa-play"></i>
+                                    Demo</a>
+                                <a href="https://arxiv.org/abs/2409.08486" class="btn btn-sm"><i
+                                        class="fas fa-file-pdf"></i> PDF</a>
+                                <a href="https://github.com/Carolzhangzz/Eco_Echo" class="btn btn-sm"><i
+                                        class="fas fa-code"></i> Code <span class="star-count">★</span></a>
+                            </div>
+                            <div class="publication-extra">
+                                <a href="#" class="btn btn-sm bibtex-toggle"><i class="fas fa-book"></i> BibTeX</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="bibtex-content" style="display: none;">
+                        <pre>
+@article{zhang2024can,
+    title={Can AI Prompt Humans? Multimodal Agents Prompt Players' Game Actions and Show Consequences to Raise Sustainability Awareness},
+    author={Zhang, Qinshi and Wen, Ruoyu and Ding, Zijian and Hendra, Latisha Besariani and LC, Ray},
+    journal={arXiv preprint arXiv:2409.08486},
+    year={2024}
+}
+                </pre>
+                    </div>
+                </div>
+            </div>
 
             <div class="publication-container">
                 <div class="publication-item">
@@ -167,44 +205,6 @@
                 </div>
             </div>
 
-
-            <div class="publication-container">
-                <div class="publication-item">
-                    <div class="publication-content">
-                        <div class="publication-image">
-                            <img src="./images/Ecoecho.png" alt="EcoEcho Publication">
-                        </div>
-                        <div class="publication-info">
-                            <h3>Can AI Prompt Humans? Multimodal Agents Prompt Players' Game Actions and Show
-                                Consequences to Raise Sustainability Awareness</h3>
-                            <p class="authors"><strong>Qinshi Zhang</strong>, Ruoyu Wen, Zijian Ding, Latisha Besariani
-                                Hendra, Ray LC†</p>
-                            <p class="venue">CHI 2025</p>
-                            <div class="publication-links">
-                                <a href="https://ecoecho.duckdns.org/" class="btn btn-sm"><i class="fas fa-play"></i>
-                                    Demo</a>
-                                <a href="https://arxiv.org/abs/2409.08486" class="btn btn-sm"><i
-                                        class="fas fa-file-pdf"></i> PDF</a>
-                                <a href="https://github.com/Carolzhangzz/Eco_Echo" class="btn btn-sm"><i
-                                        class="fas fa-code"></i> Code <span class="star-count">★</span></a>
-                            </div>
-                            <div class="publication-extra">
-                                <a href="#" class="btn btn-sm bibtex-toggle"><i class="fas fa-book"></i> BibTeX</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="bibtex-content" style="display: none;">
-                        <pre>
-@article{zhang2024can,
-    title={Can AI Prompt Humans? Multimodal Agents Prompt Players' Game Actions and Show Consequences to Raise Sustainability Awareness},
-    author={Zhang, Qinshi and Wen, Ruoyu and Ding, Zijian and Hendra, Latisha Besariani and LC, Ray},
-    journal={arXiv preprint arXiv:2409.08486},
-    year={2024}
-}
-                </pre>
-                    </div>
-                </div>
-            </div>
             <h2>Ongoing Projects</h2>
             <div class="publication-container">
                 <div class="publication-item">
