--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                             href="https://designlab.ucsd.edu/">UCSD Design Lab</a>. I also have worked with <a
                             href="https://www.scm.cityu.edu.hk/people/ray-lc">Dr.Ray LC</a> at HK CityU, resulting in a
                         <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">co-first
-                            authored paper</a> published at CHI 2024 and a first author paper at CHI2025.
-                    <p>
+                            authored paper</a> published at CHI 2024 and a  <a href="./PDF/GameSustainability_CHI_25__Clean_Version_.pdf">first authored paper at CHI2025</a>.
+                    <p> 
                         </br>
 
                         <!-- <p>I obtained my Bachelor's degree in Computer Science and Technology from the School of Information
