your commit message

--- a/index.html
+++ b/index.html
@@ -172,18 +172,17 @@
                             <img src="./images/FD.png" alt="FD Publication">
                         </div>
                         <div class="publication-info">
-                            <h3>Frontend Diffusion: Exploring Intent-Based User Interfaces through Abstract-to-Detailed
-                                Task Transitions</h3>
-                            <p class="authors"><strong>Qinshi Zhang</strong>, Latisha Besariani Hendra, Mohan Chi,
-                                Zijian Ding†</p>
-                            <p class="venue">In preparation for <a
-                                    href="https://chi2024.acm.org/for-authors/late-breaking-work/">CHI LBW</a></p>
+                            <h3>Frontend Diffusion: Empowering Self-Representation of Junior Researchers
+                                and Designers Through Agentic Workflows</h3>
+                            <p class="authors"> Zijian Ding, <strong>Qinshi Zhang</strong>, Qinshi Zhang, ZIYI WANG</p>
+                            <!-- <p class="venue">In preparation for <a
+                                    href="https://chi2024.acm.org/for-authors/late-breaking-work/">C&C 2025</a></p> -->
                             <div class="publication-links">
                                 <a href="https://x.com/jasonzding/status/1814046922874724767" class="btn btn-sm"><i
                                         class="fas fa-video"></i> Video</a>
-                                <a href="https://arxiv.org/abs/2408.00778" class="btn btn-sm"><i
+                                <a href="./PDF/C_C25_FD.pdf" class="btn btn-sm"><i
                                         class="fas fa-file-pdf"></i> PDF</a>
-                                <a href="https://github.com/Carolzhangzz/frontendiffusion" class="btn btn-sm"><i
+                                <a href="./PDF/C_C25_FD.pdf" class="btn btn-sm"><i
                                         class="fas fa-code"></i> Code <span class="star-count">★</span></a>
                             </div>
                             <div class="publication-extra">
@@ -194,8 +193,9 @@
                     <div class="bibtex-content" style="display: none;">
                         <pre>
 @article{zhang2024frontend,
-    title={Frontend Diffusion: Exploring Intent-Based User Interfaces through Abstract-to-Detailed Task Transitions},
-    author={Zhang, Qinshi and Besariani Hendra, Latisha and Chi, Mohan and Ding, Zijian},
+    title={Frontend Diffusion: Empowering Self-Representation of Junior Researchers
+        and Designers Through Agentic Workflows},
+    author={Ding, Zijian, Zhang, Qinshi, Chi, Mohan, ZIYI WANG},
     journal={arXiv e-prints},
     pages={arXiv--2408},
     year={2024}
