--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 </div>
             </div>
 
-            <h2>Ongoing Projects</h2>
+            <h2>Projects</h2>
             <div class="publication-container">
                 <div class="publication-item">
                     <div class="publication-content">
@@ -221,6 +221,25 @@
                                 </a>
                                 <a href="https://d4sd2024.ucsd.edu/about/" class="btn btn-sm">
                                     <i class="fas fa-users"></i> About Our Team
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="publication-item">
+                    <div class="publication-content">
+                        <div class="publication-image">
+                            <img src="./images/jupyter.png" alt="jupyter" class="scaled-image">
+                        </div>
+                        <div class="publication-info">
+                            <h3>Classifying Applications, Structure,
+                                and Data Transformations in Jupyter
+                                Notebooks</h3>
+                            <p class="venue">Jacob Yim*, Qinshi Zhang*</p>
+                            <p class="venue">An Exploratory Study</p>
+                            <div class="publication-links">
+                                <a href="./PDF/notebooks.pdf" class="btn btn-sm">
+                                    <i class="fas fa-link"></i> PDF
                                 </a>
                             </div>
                         </div>
